<resources>
    <string name="app_name">CameraResearch</string>
    <string name="takePictureText">Take picture</string>
    <string name="turnOnLightButtonText">Light</string>
    <string name="cameraApplication">Camera activity</string>
    <string name="videoButtonText">Video</string>
    <string name="makeVideoButtonText">Create video</string>
    <string name="videoBuildInApplication">Build in video</string>
    <string name="videoLabelText">Type video name</string>
    <string name="videoNewLibrary">New library App</string>
    <string name="recordButtonText">Record</string>
    <string name="camera2ApplicationButtonText">Camera2 API</string>
    <string name="zoomInButtonText">+</string>
    <string name="zoomOutButtonText">-</string>
    <string name="cameraChangeButtonText">Change camera</string>
</resources>
