<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/actionButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/cameraViewContainer">
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/actionButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <Button
            android:onClick="zoomIn"
            android:text="@string/zoomInButtonText"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:id="@+id/zoomIn"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:onClick="zoomOut"
            android:text="@string/zoomOutButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/zoomOut"
            android:layout_below="@+id/zoomIn"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/zoomIn" />

        <Button
            android:onClick="changeCamera"
            android:text="@string/cameraChangeButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/changeButton" />
    </RelativeLayout>

    <Button
        android:onClick="takeCameraPictureAction"
        android:text="@string/takePictureText"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:id="@+id/actionButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:onClick="turnOnLight"
        android:text="@string/turnOnLightButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:id="@+id/lightButton"
        android:layout_alignTop="@+id/actionButton" />

</RelativeLayout>