<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:onClick="turnOnBuildInVideo"
        android:text="@string/videoBuildInApplication"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/videoBuildInButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/videoNewLibrary"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/videoNewLibraryButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <VideoView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/basicVideoView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/makeVideoButton" />

    <Button
        android:onClick="recordVideoFromCamera"
        android:text="@string/makeVideoButtonText"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/makeVideoButton"
        android:layout_above="@+id/videoBuildInButton"
        android:layout_alignParentStart="true" />
</RelativeLayout>