<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.markos.cameraresearchdemo.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/imageResult"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/takePictureButton" />

    <Button
        android:onClick="openVideoActivity"
        android:text="@string/videoButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/videoActivityButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/takePictureButton" />

    <Button
        android:onClick="callSecondActivity"
        android:text="@string/cameraApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cameraBuildInButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:onClick="cameraOpen"
        android:text="@string/takePictureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/takePictureButton"
        android:layout_above="@+id/videoActivityButton"
        android:layout_alignParentStart="true" />

    <Button
        android:onClick="openCamera2APIApplication"
        android:text="@string/camera2ApplicationButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cameraBuildInButton"
        android:layout_alignStart="@+id/cameraBuildInButton"
        android:id="@+id/camera2Application"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
